0.11.0/_sources/reference/dipy.segment.rst.txt
.. AUTO-GENERATED FILE -- DO NOT EDIT!

:mod:`segment`
==============
.. automodule:: dipy.segment

.. currentmodule:: dipy.segment
.. autosummary::


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`segment.benchmarks`
---------------------------------
.. automodule:: dipy.segment.benchmarks

.. currentmodule:: dipy.segment.benchmarks
.. autosummary::


.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`segment.benchmarks.bench_quickbundles`
----------------------------------------------------
.. automodule:: dipy.segment.benchmarks.bench_quickbundles

.. currentmodule:: dipy.segment.benchmarks.bench_quickbundles
.. autosummary::

   MDFpy
   Metric
   QB_New
   QB_Old
   assert_array_equal
   assert_arrays_equal
   assert_equal
   bench_quickbundles
   get_data
   measure

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`segment.clustering`
---------------------------------
.. automodule:: dipy.segment.clustering

.. currentmodule:: dipy.segment.clustering
.. autosummary::

   ABCMeta
   AveragePointwiseEuclideanMetric
   Cluster
   ClusterCentroid
   ClusterMap
   ClusterMapCentroid
   Clustering
   Identity
   Metric
   QuickBundles
   ResampleFeature
   abstractmethod

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`segment.mask`
---------------------------
.. automodule:: dipy.segment.mask

.. currentmodule:: dipy.segment.mask
.. autosummary::

   applymask
   binary_dilation
   bounding_box
   clean_cc_mask
   color_fa
   crop
   fractional_anisotropy
   generate_binary_structure
   median_filter
   median_otsu
   multi_median
   otsu
   segment_from_cfa
   warn

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`segment.metric`
-----------------------------
.. automodule:: dipy.segment.metric

.. currentmodule:: dipy.segment.metric
.. autosummary::

   ArcLengthFeature
   AveragePointwiseEuclideanMetric
   CenterOfMassFeature
   CosineMetric
   EuclideanMetric
   Feature
   IdentityFeature
   Metric
   MidpointFeature
   MinimumAverageDirectFlipMetric
   ResampleFeature
   SumPointwiseEuclideanMetric
   VectorOfEndpointsFeature
   dist
   distance_matrix
   mdf

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`segment.quickbundles`
-----------------------------------
.. automodule:: dipy.segment.quickbundles

.. currentmodule:: dipy.segment.quickbundles
.. autosummary::

   QuickBundles
   bundles_distances_mdf
   downsample
   local_skeleton_clustering
   warn

.. AUTO-GENERATED FILE -- DO NOT EDIT!

Module: :mod:`segment.threshold`
--------------------------------
.. automodule:: dipy.segment.threshold

.. currentmodule:: dipy.segment.threshold
.. autosummary::

   otsu


.. currentmodule:: dipy.segment


.. currentmodule:: dipy.segment.benchmarks


.. currentmodule:: dipy.segment.benchmarks.bench_quickbundles


:class:`MDFpy`
~~~~~~~~~~~~~~


.. autoclass:: MDFpy
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Metric`
~~~~~~~~~~~~~~~


.. autoclass:: Metric
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`QB_New`
~~~~~~~~~~~~~~~


.. autoclass:: QB_New
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`QB_Old`
~~~~~~~~~~~~~~~


.. autoclass:: QB_Old
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

assert_array_equal
~~~~~~~~~~~~~~~~~~

.. autofunction:: assert_array_equal

assert_arrays_equal
~~~~~~~~~~~~~~~~~~~

.. autofunction:: assert_arrays_equal

assert_equal
~~~~~~~~~~~~

.. autofunction:: assert_equal

bench_quickbundles
~~~~~~~~~~~~~~~~~~

.. autofunction:: bench_quickbundles

get_data
~~~~~~~~

.. autofunction:: get_data

measure
~~~~~~~

.. autofunction:: measure


.. currentmodule:: dipy.segment.clustering


:class:`ABCMeta`
~~~~~~~~~~~~~~~~


.. autoclass:: ABCMeta
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`AveragePointwiseEuclideanMetric`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: AveragePointwiseEuclideanMetric
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Cluster`
~~~~~~~~~~~~~~~~


.. autoclass:: Cluster
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ClusterCentroid`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ClusterCentroid
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ClusterMap`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: ClusterMap
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ClusterMapCentroid`
~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ClusterMapCentroid
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Clustering`
~~~~~~~~~~~~~~~~~~~


.. autoclass:: Clustering
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Identity`
~~~~~~~~~~~~~~~~~


.. autoclass:: Identity
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Metric`
~~~~~~~~~~~~~~~


.. autoclass:: Metric
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`QuickBundles`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: QuickBundles
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ResampleFeature`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ResampleFeature
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

abstractmethod
~~~~~~~~~~~~~~

.. autofunction:: abstractmethod


.. currentmodule:: dipy.segment.mask

applymask
~~~~~~~~~

.. autofunction:: applymask

binary_dilation
~~~~~~~~~~~~~~~

.. autofunction:: binary_dilation

bounding_box
~~~~~~~~~~~~

.. autofunction:: bounding_box

clean_cc_mask
~~~~~~~~~~~~~

.. autofunction:: clean_cc_mask

color_fa
~~~~~~~~

.. autofunction:: color_fa

crop
~~~~

.. autofunction:: crop

fractional_anisotropy
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: fractional_anisotropy

generate_binary_structure
~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: generate_binary_structure

median_filter
~~~~~~~~~~~~~

.. autofunction:: median_filter

median_otsu
~~~~~~~~~~~

.. autofunction:: median_otsu

multi_median
~~~~~~~~~~~~

.. autofunction:: multi_median

otsu
~~~~

.. autofunction:: otsu

segment_from_cfa
~~~~~~~~~~~~~~~~

.. autofunction:: segment_from_cfa

warn
~~~~

.. autofunction:: warn


.. currentmodule:: dipy.segment.metric


:class:`ArcLengthFeature`
~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ArcLengthFeature
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`AveragePointwiseEuclideanMetric`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: AveragePointwiseEuclideanMetric
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`CenterOfMassFeature`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: CenterOfMassFeature
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`CosineMetric`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: CosineMetric
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`EuclideanMetric`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: EuclideanMetric
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Feature`
~~~~~~~~~~~~~~~~


.. autoclass:: Feature
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`IdentityFeature`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: IdentityFeature
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`Metric`
~~~~~~~~~~~~~~~


.. autoclass:: Metric
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`MidpointFeature`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: MidpointFeature
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`MinimumAverageDirectFlipMetric`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: MinimumAverageDirectFlipMetric
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`ResampleFeature`
~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: ResampleFeature
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`SumPointwiseEuclideanMetric`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: SumPointwiseEuclideanMetric
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__


:class:`VectorOfEndpointsFeature`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: VectorOfEndpointsFeature
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

dist
~~~~

.. autofunction:: dist

distance_matrix
~~~~~~~~~~~~~~~

.. autofunction:: distance_matrix

mdf
~~~

.. autofunction:: mdf


.. currentmodule:: dipy.segment.quickbundles


:class:`QuickBundles`
~~~~~~~~~~~~~~~~~~~~~


.. autoclass:: QuickBundles
  :members:
  :undoc-members:
  :show-inheritance:

  .. automethod:: __init__

bundles_distances_mdf
~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: bundles_distances_mdf

downsample
~~~~~~~~~~

.. autofunction:: downsample

local_skeleton_clustering
~~~~~~~~~~~~~~~~~~~~~~~~~

.. autofunction:: local_skeleton_clustering

warn
~~~~

.. autofunction:: warn


.. currentmodule:: dipy.segment.threshold

otsu
~~~~

.. autofunction:: otsu

